feat: add advertising controller, model and migration
