# app/Models/Advertising.php
@@ -1,0 +1,19 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Advertising extends Model
+{
+    use HasFactory;
+
+    protected $fillable = [
+        'title',
+        'placement_area',
+        'play_time',
+        'description',
+        'video_path',
+    ];
+}
